THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/gnome-shell

theme_DATA = \
	border-popup-sub-menu.svg \
	button-active.svg \
	button-disabled.svg \
	button-focus-hover.svg \
	button-focus.svg \
	button-hover.svg \
	button-search-active.svg \
	button-search-focus-hover.svg \
	button-search-focus.svg \
	button-search-hover.svg \
	button-search.svg \
	button.svg \
	calendar-arrow-left.svg \
	calendar-arrow-right.svg \
	checkbox-focused.svg \
	checkbox-off-focused.svg \
	checkbox-off.svg \
	checkbox.svg \
	close.svg \
	close-window.svg \
	corner-ripple-ltr.png \
	corner-ripple-rtl.png \
	dash-placeholder.svg \
	entry-border-toolbar.svg \
	filter-selected-ltr.svg \
	filter-selected-rtl.svg \
	gnome-shell.css \
	hover-border-st-chooser-item.svg \
	hover-border.svg \
	message-tray-background.png \
	noise-texture.png \
	off-intl.png \
	off.png \
	on-intl.png \
	on.png \
	option-hover-rtl.svg \
	option-hover.svg \
	option-rtl.svg \
	option-selected-rtl.svg \
	option-selected.svg \
	option.svg \
	panel-button-border.svg \
	panel-button-highlight-narrow.svg \
	panel-button-highlight-wide.svg \
	panel.png \
	process-working.svg \
	p-toolbar-hover.svg \
	running-indicator.svg \
	scroll-hhandle.svg \
	scroll-vhandle.svg \
	ToolbarDark.png \
	view-tab-selected.svg \
	ws-switch-arrow-down.svg \
	ws-switch-arrow-up.svg

EXTRA_DIST = $(theme_DATA)
