THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/gnome-shell

theme_DATA = \
	background.png \
	button-active-hover.svg \
	button-active.svg \
	button-insensitive.svg \
	button-prelight.svg \
	button.svg \
	calendar-arrow-left.svg \
	calendar-arrow-right.svg \
	calendar-today.svg \
	checkbox-focused.svg \
	checkbox-off-focused.svg \
	checkbox-off.svg \
	checkbox.svg \
	classic-process-working.svg \
	classic-toggle-off-intl.svg \
	classic-toggle-off-us.svg \
	classic-toggle-on-intl.svg \
	classic-toggle-on-us.svg \
	close.svg \
	close-window.svg \
	corner-ripple-ltr.png \
	corner-ripple-rtl.png \
	dash-placeholder.svg \
	filter-selected-ltr.svg \
	filter-selected-rtl.svg \
	gnome-classic.css \
	gnome-shell.css \
	logged-in-indicator.svg \
	message-tray-background.png \
	more-results.svg \
	noise-texture.png \
	page-indicator-active.svg \
	page-indicator-checked.svg \
	page-indicator-hover.svg \
	page-indicator-inactive.svg \
	panel-button-border.svg \
	panel-button-highlight-narrow.svg \
	panel-button-highlight-wide.svg \
	panel-menu-active.svg \
	panel-menu-hover.svg \
	panel.png \
	process-working.svg \
	ripple-ltr.svg \
	ripple-rtl.svg \
	running-indicator.svg \
	source-button-border.svg \
	summary-counter.svg \
	toggle-off-intl.svg \
	toggle-off-us.svg \
	toggle-on-intl.svg \
	toggle-on-us.svg \
	ws-switch-arrow-down.png \
	ws-switch-arrow-up.png

EXTRA_DIST = $(theme_DATA)
