THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/gtk-2.0

theme_DATA = \
	adwaita_engine.c \
	gtkrc \
	sidebarrc

EXTRA_DIST = $(theme_DATA)

SUBDIRS =	\
	Arrows	\
	Buttons \
	Check-Radio \
	Entry \
	Expanders \
	Handles \
	Lines \
	Menu-Menubar \
	Others \
	ProgressBar \
	Range \
	Scrollbars \
	Shadows \
	Spin \
	Tabs \
	Toolbar

DIST_SUBDIRS =	\
	Arrows	\
	Buttons \
	Check-Radio \
	Entry \
	Expanders \
	Handles \
	Lines \
	Menu-Menubar \
	Others \
	ProgressBar \
	Range \
	Scrollbars \
	Shadows \
	Spin \
	Tabs \
	Toolbar
