THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/gtk-3.0

theme_DATA = \
	gnome-applications.css \
	gnome-applications-dark-overrides.css \
	gtk.css \
	gtk-dark.css \
	gtk-fallback.css \
	gtk-main-common.css \
	gtk-main.css \
	gtk-main-dark.css \
	gtk-widgets-assets.css \
	gtk-widgets-assets-dark.css \
	gtk-widgets-backgrounds.css \
	gtk-widgets-borders.css \
	gtk-widgets-borders-dark.css \
	gtk-widgets.css \
	gtk-widgets-dark-overrides.css \
	nautilus-pathbar-vs2.css \
	nautilus-toolbar.css \
	nemo.css \
	notebook.css \
	raised-buttons.css \
	settings.ini \
	unity.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS =	\
	assets	\
	borders

DIST_SUBDIRS =	\
	assets	\
	borders

