THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/gtk-3.0

theme_DATA = \
	gnome-applications.css \
	gnome-applications-dark-overrides.css \
	gtk.css \
	gtk-dark.css \
	gtk-fallback.css \
	gtk-main-common.css \
	gtk-main.css \
	gtk-main-dark.css \
	gtk-main-dark-ORIG.css \
	gtk-widgets-assets.css \
	gtk-widgets-assets-dark.css \
	gtk-widgets-backgrounds.css \
	gtk-widgets-borders.css \
	gtk-widgets-borders-dark.css \
	gtk-widgets.css \
	gtk-widgets-dark-overrides.css \
	mate-applications.css \
	overlay-scrollbar.css \
	settings.ini \
	ubuntu-pathbar.css \
	unity.css

EXTRA_DIST = $(theme_DATA)

SUBDIRS =	\
	assets	\
	borders

DIST_SUBDIRS =	\
	assets	\
	borders

CLEANFILES = index.theme
