THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/metacity-1

theme_DATA = \
	Backdrop-Toolbar.png \
	button-center-placement-hover.svg \
	button-center-placement-pressed.svg \
	button-center-placement.svg \
	button-left-placement-Experament.svg \
	button-left-placement-hover.svg \
	button-left-placement-pressed.svg \
	button-left-placement.svg \
	button-right-placement-hover.svg \
	button-right-placement-pressed.svg \
	button-right-placement.svg \
	button-right-placement.svg-rect17861-2-2-7-4294966996.png \
	button-single-placement-hover.svg \
	button-single-placement-pressed.svg \
	button-single-placement.svg \
	highlight.svg \
	metacity-theme-1.xml \
	metacity-theme-2.xml \
	metacity-theme-3.xml \
	Toolbar.png \
	unfocused-button-center-placement-pressed.svg \
	unfocused-button-center-placement.svg \
	unfocused-button-left-placement-pressed.svg \
	unfocused-button-left-placement.svg \
	unfocused-button-right-placement-pressed.svg \
	unfocused-button-right-placement.svg \
	unfocused-button-single-placement-pressed.svg \
	unfocused-button-single-placement.svg

EXTRA_DIST = $(theme_DATA)
