THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/openbox-3

theme_DATA = \
	close_pressed.xbm \
	close.xbm \
	desk_toggled.xbm \
	desk.xbm \
	iconify_pressed.xbm \
	iconify.xbm \
	max_pressed.xbm \
	max_toggled.xbm \
	max.xbm \
	shade_pressed.xbm \
	shade.xbm \
	themerc

EXTRA_DIST = $(theme_DATA)
