THEME_NAME=DeLorean-Dark
 
themedir = $(datadir)/themes/$(THEME_NAME)/unity

theme_DATA = \
	close_dash_disabled.svg \
	close_dash_prelight.svg \
	close_dash_pressed.svg \
	close_dash.svg \
	close_focused_normal.svg \
	close_focused_prelight.svg \
	close_focused_pressed.svg \
	close.svg \
	close_unfocused_prelight_dash.svg \
	close_unfocused_prelight.svg \
	close_unfocused_pressed.svg \
	close_unfocused.svg \
	maximize_dash_disabled.svg \
	maximize_dash_prelight.svg \
	maximize_dash_pressed.svg \
	maximize_dash.svg \
	maximize_focused_normal.svg \
	maximize_focused_prelight.svg \
	maximize_focused_pressed.svg \
	maximize.svg \
	maximize_unfocused_prelight.svg \
	maximize_unfocused_pressed.svg \
	maximize_unfocused.svg \
	menu_prelight.svg \
	menu.svg \
	minimize_dash_disabled.svg \
	minimize_dash_prelight.svg \
	minimize_dash_pressed.svg \
	minimize_dash.svg \
	minimize_focused_normal.svg \
	minimize_focused_prelight.svg \
	minimize_focused_pressed.svg \
	minimize.svg \
	minimize_unfocused_prelight.svg \
	minimize_unfocused_pressed.svg \
	minimize_unfocused.svg \
	unmaximize_dash_disabled.svg \
	unmaximize_dash_prelight.svg \
	unmaximize_dash_pressed.svg \
	unmaximize_dash.svg \
	unmaximize_focused_normal.svg \
	unmaximize_focused_prelight.svg \
	unmaximize_focused_pressed.svg \
	unmaximize.svg \
	unmaximize_unfocused_prelight.svg \
	unmaximize_unfocused_pressed.svg \
	unmaximize_unfocused.svg

EXTRA_DIST = $(theme_DATA)

